spacing fixes

--- a/src/index.css
+++ b/src/index.css
@@ -233,9 +233,9 @@ h6 {
   inset: 0;
   opacity: 1;
   background-image: url("/images/background-noise.svg");
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: center;
+  background-repeat: repeat;
+  background-size: auto;
+  background-position: top left;
   pointer-events: none;
 }
 
